# BlurEngine

./: Notes  merge_anims.py  meson.build
engine/: meson.build
engine/include/blur/: mesh.hpp  renderer.hpp  shader.hpp  window.hpp
engine/src/: mesh.cpp  renderer.cpp  shader.cpp  window.cpp
game/: meson.build
game/src/: main.cpp
